--- a/VolumeRendering/VolumeRendering.vcxproj.filters
+++ b/VolumeRendering/VolumeRendering.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="VolumeRendering.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="MainWindow.h">
@@ -80,6 +83,9 @@
     </ClInclude>
     <ClInclude Include="VolumeRendering.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
