--- a/VolumeRendering/VolumeRendering.vcxproj.filters
+++ b/VolumeRendering/VolumeRendering.vcxproj.filters
@@ -36,12 +36,6 @@
     <Filter Include="Source Files\shader">
       <UniqueIdentifier>{fe316368-abf1-4085-a1e7-b2aad84c3268}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\shader\fs">
-      <UniqueIdentifier>{a5818e7c-c77f-4a8b-bc59-c797db0a5dbc}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\shader\vs">
-      <UniqueIdentifier>{83f87445-5bf4-43b0-b7c3-565c736b7bd4}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -98,23 +92,11 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader\fs\rayboxintersectfs.glsl">
-      <Filter>Source Files\shader\fs</Filter>
+    <None Include="shader\raycastfs.glsl">
+      <Filter>Source Files\shader</Filter>
     </None>
-    <None Include="shader\fs\raycastfs.glsl">
-      <Filter>Source Files\shader\fs</Filter>
-    </None>
-    <None Include="shader\fs\raycast2fs.glsl">
-      <Filter>Source Files\shader\fs</Filter>
-    </None>
-    <None Include="shader\vs\rayboxintersectvs.glsl">
-      <Filter>Source Files\shader\vs</Filter>
-    </None>
-    <None Include="shader\vs\raycast2vs.glsl">
-      <Filter>Source Files\shader\vs</Filter>
-    </None>
-    <None Include="shader\vs\raycastvs.glsl">
-      <Filter>Source Files\shader\vs</Filter>
+    <None Include="shader\raycastvs.glsl">
+      <Filter>Source Files\shader</Filter>
     </None>
   </ItemGroup>
 </Project>
